Rewrite catalog entries for 1.20.1 API